[gd_scene load_steps=3 format=3 uid="uid://b4f63hhly26f0"]

[ext_resource type="Script" uid="uid://b3u44y6kvpou2" path="res://Scripts/gun_9_mm.gd" id="1_uryjh"]
[ext_resource type="Texture2D" uid="uid://c21xjdgm73shg" path="res://Assets/guns/gun_9mm.png" id="2_kipvx"]

[node name="gun_9mm" type="Node2D"]
script = ExtResource("1_uryjh")

[node name="rotacion" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="rotacion"]
z_index = 12
texture_filter = 6
position = Vector2(30, 1)
scale = Vector2(0.0721698, 0.0631579)
texture = ExtResource("2_kipvx")
flip_h = true

[node name="lugar_disparo" type="Marker2D" parent="rotacion/Sprite2D"]
position = Vector2(124.706, -47.5)

[node name="tiempo_disparo" type="Timer" parent="."]

[connection signal="timeout" from="tiempo_disparo" to="." method="_on_tiempo_disparo_timeout"]
